--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jboss.marshalling.version>1.3.18.GA</jboss.marshalling.version>
         <slf4j-api.version>1.7.5</slf4j-api.version>
-        <spring.version>3.2.3.RELEASE</spring.version>
+        <spring.version>3.2.5.RELEASE</spring.version>
     </properties>
 
     <dependencies>
@@ -27,19 +27,6 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.5.2</version>
-        </dependency>
-
-        <!--dubbo-->
-        <dependency>
-            <groupId>qunar.common</groupId>
-            <artifactId>common-rpc</artifactId>
-            <version>8.3.6</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.qunar.flightdetail</groupId>
-            <artifactId>oag_data_api</artifactId>
-            <version>1.0.8</version>
         </dependency>
 
         <dependency>
@@ -214,9 +201,9 @@
         <finalName>Learning</finalName>
         <plugins>
             <plugin>
-                <groupId>org.mortbay.jetty</groupId>
+                <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>8.1.9.v20130131</version>
+                <version>9.4.1.v20170120</version>
                 <configuration>
                     <!--<reload>manual</reload>-->
                     <scanIntervalSeconds>5</scanIntervalSeconds>
